Finished the basic group chat functionality with invites functionality

--- a/ChatSphere/Style/Login-Style.css
+++ b/ChatSphere/Style/Login-Style.css
@@ -25,7 +25,7 @@ body {
 }
 
 /* Animated Text - Keep it still after dropping down */
-.animated-text {
+a .animated-text {
    
 margin-left:10vh;
     opacity: 0;
